fix whitespace

--- a/src/Home3.css
+++ b/src/Home3.css
@@ -23,7 +23,7 @@
     justify-items: center;
     align-content: center;
     color: white;
-    height: 59vh;
+    height: 58vh;
     width: 100%;
   position: relative;
     
